change theme color

--- a/static/css/tweaks.css
+++ b/static/css/tweaks.css
@@ -97,7 +97,7 @@ div.skills-heading{
 
 
 .resume-section blockquote {
-    border-left: 4px solid #BD5D38;
+    border-left: 4px solid #005B96;
     padding-left: 1em;
 }
 
