--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -48,7 +48,7 @@ h2 {
 }
 
 .list-social-icons a:hover {
-  color: #BD5D38;
+  color: #005B96;
 }
 
 .list-social-icons a .fa-lg {
@@ -60,7 +60,7 @@ h2 {
 }
 
 .list-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  color: #005B96;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -135,15 +135,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #005B96 !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #005B96 !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #005B96;
 }
 
 a:hover, a:focus, a:active {
