--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -11,11 +11,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" href="{{ "#about" | relURL }}">About</a>
+        <a class="nav-link js-scroll-trigger" href="{{ "#about" | relURL }}">{{ i18n "about" }}</a>
       </li>
       {{ if .Site.Params.showSkills }}
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="/#skills">{{ i18n "skills" }}</a>
           </li>
       {{ end }}
       {{ if .Site.Params.showProjects }}
@@ -35,17 +35,17 @@
       {{ end }}
       {{ if .Site.Params.showExperience }}
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#experience">Experience</a>
+            <a class="nav-link js-scroll-trigger" href="/#experience">{{ i18n "experience" }}</a>
           </li>
       {{ end }}
       {{ if .Site.Params.showEducation }}
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#education">Education</a>
+            <a class="nav-link js-scroll-trigger" href="/#education">{{ i18n "education" }}</a>
           </li>
       {{ end }}
       {{ if .Site.Params.showBlog }}
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#blog">Blog</a>
+            <a class="nav-link js-scroll-trigger" href="/#blog">{{ i18n "blog" }}</a>
           </li>
       {{ end }}
     </ul>
