--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -50,7 +50,7 @@
       {{ end }}
       {{ if .Site.Params.showContact}}
           <li class="nav-item">
-            <a class="nav-link" href="/contact">Contact Card</a>
+            <a class="nav-link" href="/contact">{{ i18n "contact" }}</a>
           </li>
       {{ end }}
     </ul>
