--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
             {{ partial "sectionSummary" . }}
          {{ end }}
       {{ else }}
-         {{ partial (printf "portfolio/%s" . ) site }}
+         {{ partial (printf "portfolio/%s" . ) $site }}
       {{ end }}
    {{ end }}
 {{ end }}
