--- a/layouts/partials/portfolio/education.html
+++ b/layouts/partials/portfolio/education.html
@@ -1,7 +1,7 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
           <div class="my-auto">
           <h2 class="mb-5">{{ i18n "education" }}</h2>
-            {{ range site.Data.education }}
+            {{ range $.Data.education }}
               <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
                   <h3 class="mb-0">{{ .school | markdownify }}</h3>
