--- a/layouts/partials/portfolio/experience.html
+++ b/layouts/partials/portfolio/experience.html
@@ -1,7 +1,7 @@
 <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
   <div class="my-auto" id="experience-content">
   <h2 class="mb-5">{{ i18n "experience" }}</h2>
-    {{ range site.Data.experience }}
+    {{ range $.Data.experience }}
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">{{ .role }}</h3>
