--- a/layouts/partials/contact-qr.html
+++ b/layouts/partials/contact-qr.html
@@ -3,5 +3,5 @@
   <img id="qr-code" 
   class="qrcode" 
   alt="Scannable QR code with contact info" 
-  src="https://quickchart.io/chart?cht=qr&chs=200x200&chl=MECARD:N:{{ .Param "lastName" }},{{ .Param "firstName" }};{{ .Param "address" }};TEL:{{ .Param "phone" }};EMAIL:{{ .Param "email" }};URL:{{ .Site.BaseURL }};NOTE:{{ .Param "contactNote" }};;"/>
+  src="https://quickchart.io/qr?text={{- partial "vcard" .  -}}"/>
 </div>
